# search-and-rescue-robot

./: .gitignore  .gitmodules  LICENSE  README.md  docker_run.sh  docker_terminal.sh  onboard_source.sh
.devcontainer/: Dockerfile  devcontainer.json  testDockerFile
colcon_ws/src/imu_calib/: CMakeLists.txt  README.md  package.xml
colcon_ws/src/imu_calib/include/imu_calib/: accel_calib.h
colcon_ws/src/imu_calib/src/: accel_calib.cpp  apply_calib.cpp  do_calib.cpp
colcon_ws/src/transbot_bringup/: CMakeLists.txt  package.xml
colcon_ws/src/transbot_bringup/config/: bringup.rviz  ekf_localization.yaml  imu_params.yaml  mapper_params_online_async.yaml  nav2_params.yaml  nav2_test_params.yaml  old_mapper_params_online_async.yaml  slam_bringup.rviz
colcon_ws/src/transbot_bringup/launch/: bringup.launch.py  nav2_slam.launch.py  rtab_slam.launch.py  slam.launch.py  transport.launch.py  transport_offboard.launch.py  transport_onboard.launch.py
colcon_ws/src/transbot_bringup/scripts/: human_detection_node.py  human_detection_v2_node.py  human_pose_srv_client.py  human_pose_srv_server.py  human_poses_node.py  search_and_rescue_action_server.py  search_pose_srv_server.py  set_search_pose_srv_server.py  transbot_driver.py
colcon_ws/src/transbot_bringup/src/: base_node.cpp  move_forward_server.cpp  move_server.cpp
colcon_ws/src/transbot_bringup/transbot_bringup/: helpers.py  tasks.py
colcon_ws/src/transbot_description/: CMakeLists.txt  package.xml
colcon_ws/src/transbot_description/launch/: transbot_description.launch.py
colcon_ws/src/transbot_description/urdf/: transbot_astra.urdf.xacro
colcon_ws/src/transbot_msgs/: CMakeLists.txt  package.xml
colcon_ws/src/transbot_msgs/action/: SearchAndRescue.action
colcon_ws/src/transbot_msgs/msg/: General.msg  HumanLocations.msg  HumanPoseArray.msg
colcon_ws/src/transbot_msgs/srv/: GetSearchPoses.srv  Headlight.srv  Move.srv  MoveForward.srv  Patrol.srv  SetSearchPose.srv
config/: export_zenoh_config.sh  routerconfig.json5  sessionconfig.json5
