<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>transbot_bringup</name>
  <version>0.0.0</version>
  <description>ROS2 package for transbot bringup</description>
  <maintainer email="jhensenrayagni@gmail.com">ubuntu</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>transbot_msgs</depend>
  <depend>tf2</depend>

  <build_depend>tf2_geometry_msgs</build_depend>

  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>sllidar_ros2</exec_depend>
  <exec_depend>transbot_description</exec_depend>
  <exec_depend>orbbec_camera</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
